--- a/Resturant-Management-System/Resturant-Management-System.csproj
+++ b/Resturant-Management-System/Resturant-Management-System.csproj
@@ -160,5 +160,11 @@
   <ItemGroup>
     <None Include="Resources\Settings-1.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Logout - 2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Logout - 1.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
